--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,12 @@ dependencies = [
     "langchain-community (>=0.3.24,<0.4.0)",
     "langchain-openai (>=0.3.17,<0.4.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "langchain-google-genai (>=2.1.4,<3.0.0)"
+    "langchain-google-genai (>=2.1.4,<3.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "pytest-asyncio (>=0.26.0,<0.27.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "faker (>=37.3.0,<38.0.0)"
 ]
 
 
